Fix text overflowing in meetings

--- a/static/css/meetings.scss
+++ b/static/css/meetings.scss
@@ -36,7 +36,7 @@
         border: 1px solid #eee;
         margin-bottom: 3px;
         display: block;
-        height: 80px;
+        min-height: 80px;
         position: relative;
 
         h4 {
